fix: list-view collapsed

--- a/src/containers/action-bar/toolbox/index.css
+++ b/src/containers/action-bar/toolbox/index.css
@@ -1,10 +1,10 @@
 .fcr-toolbox-popover-content {
-  padding: 21px 24px 22px;
+  padding: 20px 15px;
 }
 .fcr-toolbox-popover-title {
   @apply fcr-font-title fcr-text-1;
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 14px;
+  line-height: 14px;
   padding-bottom: 20px;
 }
 .fcr-toolbox-popover-item-wrapper {
